app/frontend/assets/styles/_base.scss
@mixin focus-outline {
    outline-style: solid !important;
    outline-width: thin !important;
    outline-color: $gray-400 !important;
}

html,
body {
    margin: 0;
    font-family: "Bolder", sans-serif;
    font-size: 1em;
    color: $body-color;
    background-color: $blue-100;

    @media (min-width: map-get($grid-breakpoints, sm)) {
        font-size: 1.125em;
    }
}

body {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-smoothing: antialiased;
    width: 100%;
}

html {
    height: 100%;
}

.container__toplevel {
    display: flex;

    aside {
        width: 227px;
        height: 100vh;
        box-sizing: border-box;
        transition: width $transition-duration-default $transition-ease-default;
        position: fixed;
        top: 0;
        left: 0;
        border-right: 1px solid $green-400;

        .nav--small & {
            width: 60px;
        }
    }

    .container__main {
        margin-left: 227px;
        padding-top: 60px;
        flex: 1;
        transition: margin-left $transition-duration-default $transition-ease-default;

        > .bar--top {
            border-bottom: 1px solid $green-400;
            height: 60px;
            width: 100vw;
            background-color: $blue-100;
            position: fixed;
            top: 0;
            left: 0;
            z-index: 30;
            box-sizing: border-box;
            pointer-events: none;

            .container__user {
                pointer-events: all;
            }
        }
        main {
            padding: 1em 0.75em 0;
            margin-bottom: 5em;
            box-sizing: border-box;
            max-width: 2000px;
            margin: 0 auto;
        }
    }
}

.nav--small {
    aside + .container__main {
        margin-left: 60px;
    }
}

body,
main {
    // margin: 0 auto;

    // > .container,
    // > .container--env .container {
    //     display: block;
    //     max-width: map-get($container-max-widths, xxl);
    //     margin: 0 auto;
    // }
}

body.wide--xl {
    main,
    header,
    .container--env {
        > .container {
            max-width: 1250px;
        }
    }
}

main,
header {
    padding: 0 map-get($container-margin, s) 16px;
}

main {
    padding-bottom: 100px;
}

.skiplink {
    position: absolute;
    left: -10000px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
    font-size: 0.75rem;
    color: $black;

    &:focus {
        text-decoration: underline;
        width: auto;
        height: auto;
        left: 24px;
        top: 3px;
        z-index: 50;
    }
}

.screen-xl {
    display: none;

    @media (min-width: map-get($grid-breakpoints, lg)) {
        display: block;
    }
}
.screen-xl--notification {
    @media (min-width: map-get($grid-breakpoints, lg)) {
        display: none;
    }
}
.grid-container {
    display: grid;
    grid-auto-columns: minmax(0, 1fr);
    gap: 32px;

    + .grid-container {
        .grid-item:not(:empty) {
            margin-top: 32px;
        }
    }

    @media (min-width: map-get($grid-breakpoints, md)) {
        grid-template-columns: 66fr 34fr;

        &.grid-container--4-1 {
            grid-template-columns: 4fr 1fr;
        }
        &.grid-container--full {
            grid-template-columns: 1fr;
        }
        &.grid-container--reversed {
            grid-template-columns: 34fr 66fr;
        }
        &.grid-container--3cols {
            grid-template-columns: 1fr 1fr 1fr;
        }
        &.grid-container--4cols {
            grid-template-columns: 1fr 1fr 1fr 1fr;
        }
        &.grid-container--5cols {
            grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
        }
        &.grid-container--half {
            grid-template-columns: 1fr 1fr;
        }
    }

    .grid-item {
        box-sizing: content-box;
        min-width: 0; // when min-widh is not set, nested charts are not animating..
        &.bottom-left {
            position: relative;
            display: flex;
            flex-direction: column;
            justify-content: flex-end;

            > * {
                align-self: flex-start;
            }
        }
    }
}

// HEADINGS
h1,
.h1 {
    font-size: $h1-font-size;
}

h2,
.h2 {
    font-size: $h2-font-size;
}
h3,
.h3 {
    font-size: $h3-font-size;
}
h4,
.h4 {
    font-size: $h4-font-size;
}
h5,
.h5 {
    font-size: $h5-font-size;
}
h6,
.h6 {
    font-size: $h6-font-size;
}

p {
    line-height: $line-height-base;
    max-width: map-get($container-max-widths, lg);
}
h2 + p {
    margin-top: 0;
}

a {
    transition: color $transition-duration-default $transition-ease-default;

    svg {
        path {
            transition: fill $transition-duration-default $transition-ease-default;
        }
    }
}

@mixin has-icon {
    display: inline-block;
    margin-left: 25px;
    position: relative;

    svg {
        position: absolute;
        left: -25px;
        top: 4px;

        path {
            fill: $primary;
        }
    }
}
// TABLES
table {
    font-size: 0.875em;
    border-collapse: collapse;
    width: 100%;

    tr:nth-child(even) {
        background-color: $gray-tint01;
    }
    th,
    td {
        padding: 10px 5px 10px 0;
    }
    thead {
        th {
            text-align: left;
            border-bottom: 2px solid $gray-tint11;
        }
    }
    tbody {
        td {
            vertical-align: middle;

            &:first-child {
                padding: 0;
            }

            p {
                padding: 0;
                margin: 0;
            }
        }
    }
}

* {
    &:focus-visible {
        @include focus-outline();
    }
}
details:has(summary:focus-visible) {
    @include focus-outline();
}

summary:focus-visible {
    outline-color: transparent !important;
}
/* ... */

